Fix minor layout issue

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -100,7 +100,7 @@
 
         @include breakpoint(md) {
             display: inline-block;
-            padding: 5px $baseline*2 3px $baseline*2;
+            padding: 5px $baseline*2 9px $baseline*2;
             border-left: 1px solid $thunder;
             font-size: 13px; // smaller font on medium for retina screens
         }
